fix menu on mobile

--- a/stylus/Flare/media-queries.styl
+++ b/stylus/Flare/media-queries.styl
@@ -287,6 +287,12 @@
     .scroll
       max-height: $fullheight
 
+    dt
+      font-size: 1.08em
+
+    dd
+      font-size: 0.85em
+
 @media $medium
   .container
     width: 1285px
