--- a/stylus/Flare/navigation.styl
+++ b/stylus/Flare/navigation.styl
@@ -124,7 +124,7 @@ dl
     flex-justify-content(space-between)
     padding: 0.35em 0.5em
     background-color: $bordercolor
-    font-size: 1.08em
+    font-size: 0.95em
 
     span.sub-nav__icon
       padding: 1em 0.5em 0 0
@@ -167,7 +167,7 @@ dl
     padding: 1em
     margin: 0
     border-bottom: $border
-    font-size: 0.95em
+    font-size: 0.65em
 
     a
       text-decoration: none !important
